# mbot

./: .gitignore  LICENSE  README.md  pyproject.toml
firmware/esp32/light_renderer/: CMakeLists.txt
firmware/esp32/light_renderer/main/: CMakeLists.txt  main.c
mbot/: __init__.py  __main__.py  board.py  live.py  midi.py  pieces.py
midi/: e_lucevan_le_stelle.mid  nessun_dorma.mid  o_mio_babbino_caro_violin.mid
scripts/: flash_firmware.sh  install.sh  stop_playback.sh
tests/: __init__.py  soak.py  test_board.py  test_cli.py  test_midi.py  test_support.py
