[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mbot"
version = "0.1.0"
description = "Host-side MIDI and light-stream harness for an ESP32 serial renderer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mbot = "mbot.__main__:main"

[tool.setuptools]
packages = ["mbot"]
